Fix z-index of footer dialog and of map
Also use 'with-modal' to avoid scrollbar

--- a/src/app/components/dialog/dialog.scss
+++ b/src/app/components/dialog/dialog.scss
@@ -23,6 +23,7 @@ dialog {
         max-width: none;
         position: fixed;
         width: calc(100% - #{2 * $normal-margin});
+        z-index: 3;
     }
 
     &.reverse-colors {
